--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,8 +1,38 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background:#62747C;
+
 }
 
 a {
   color: #00B7FF;
+}
+
+form {
+	background:#fff;
+	width:60%;
+	margin:0 auto;
+	padding:60px;
+}
+
+input {
+		border:1px solid #58E2C3;
+		padding:4px;
+		color:#58E2C3;
+		width:100%;
+		height:30px;
+		margin:5px 0;
+	}
+
+button {
+	background:#58E2C3;
+	border:none;
+	color:#fff;
+	padding:20px 30px;
+	cursor: pointer;
+}
+
+button:hover {
+	background:#62747C;
 }
