--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  form
+    h1 Poorly Designed Input
+    input(type="text" name="fname" placeholder="First Name")
+    br
+    input(type="text" name="lname" placeholder="Last Name")
+    br
+    input(type="text" name="major" placeholder="Major")
+    br
+    button(type="submit") Add Student
