--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -5,3 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+
+    script(src="/bower_components/jquery/dist/jquery.min.js")
+    script(src="/js/main.js")
